@@ -14,14 +14,13 @@ HQ - prehledova tabulka
 -----------------------
 - blbe se prohlizi na mobilu - mozna pridat ikonu ktera 
   po kliknuti nahore a vlevo zobrazi table headery nebo tak neco
-
+- prodlouzit pauzu pro zmizeni pop-up
 
 CHROUST
 -------
 viz wiki: https://kufr.cz:1443/kk/wiki/iquest/implementace/testovani
 
-
-
+- varovat pri neexistujicim next_cgrp_id
 
 INSTALL
 -------
