@@ -88,11 +88,18 @@
 ; Format of the value is: CGRP_ID, CONDITION
 ;   CGRP_ID is ID of the clue group that is gained by solving this solution
 ;   CONDITION is optional. If specified the clue group is gained only if the 
-;             condition is met. As of now, just one type of condition 
-;             is supported: 
+;             condition is met. As of now following types of conditions 
+;             are supported: 
 ;     -  DEPENDS(SOLUTION_ID1, SOLUTION_ID2, ... )
-;          this condition is met if all the solutions metioned as it's parameters
-;          are solved.
+;           This condition is met if all the solutions metioned as it's parameters
+;           are solved.
+;     -  TRUE()
+;           This contition is always met. So it behaves same way as if no condition 
+;           is specified. But this condition can be used for its side effect:
+;           It draw the arrow in dashed style in the contest graph.
+;     -  FALSE()
+;           This conditin is never met. No meaningful use case is comming to my mind. 
+;           But we have the TRUE() conditon so why not FALSE()?
 ;
 ;next_cgrp_id[]=FOOBAR
 ;next_cgrp_id[]="FOO, DEPENDS(BAR1, BAR2, BAR3)"
